Fix bug - Wrong position of Menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,12 +75,12 @@
 
 * {
   box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
 }
